[project]
name = "lang-trm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "adam-atan2>=0.0.3",
  "argdantic>=1.3.3",
  "coolname>=2.2.0",
  "datasets>=4.4.1",
  "dotenv>=0.9.9",
  "einops>=0.8.1",
  "huggingface-hub>=1.1.6",
  "hydra-core>=1.3.2",
  "invoke>=2.2.1",
  "mlflow>=3.6.0",
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "polars>=1.35.2",
  "torch>=2.9.1",
  "tqdm>=4.67.1",
]
